define larger screen

--- a/css/style.css
+++ b/css/style.css
@@ -372,3 +372,23 @@ audio {
         height: 960px
     }
 }
+
+@media screen and (min-width: 1200px) {
+    #scroll {
+        height: 700px;
+    }
+
+    #scroll div {
+        height: 600px;
+        top: 30px;
+    }
+
+    div #front {
+        height: 350px;
+        top: 470px;
+    }
+
+    #scroll #stars {
+        height: 960px
+    }
+}
